docs(changelog): add visitor pattern implementation for v2.18.0
Document complete visitor pattern implementation across all 8 language bindings:
- Dual-trait architecture (sync/async)
- 40+ visitor methods with NodeContext metadata
- 520+ tests passing at 100% across all bindings
- Comprehensive fixes for Rust core, bindings, and linting
- Performance benchmarking infrastructure

This feature will be released in v2.18.0.